<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaterDelivery</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_stop">Выход</string>
    <string name="title_activity_order_list">Принятые заказы</string>
    <string name="title_activity_personal_code">WaterDelivery</string>
    <string name="refresh">Обновить</string>
    <string name="title_activity_order_details">Заказ</string>
    <string name="phone_header">Тел.</string>
    <string name="count_header_20">20</string>
    <string name="count_header_20m">20М</string>
    <string name="count_header_5"> 5</string>
    <string name="count_header_15">1.5</string>
    <string name="count_header_06">0.6</string>
    <string name="addr_header">Адрес</string>
    <string name="deliver_time_header">Срок</string>
    <string name="order_time_header">Время</string>
    <string name="person_code_hint">Персональный код:</string>
    <string name="client_code_hint">Код клиента:</string>
    <string name="phone_hint">Телефон:</string>
    <string name="count_hint">Кол-во:</string>
    <string name="done_count_hint">Доставлено:</string>
    <string name="new_done_count_hint">Доставлено</string>
    <string name="addr_hint">Адрес:</string>
    <string name="deliver_time_hint">Срок:</string>
    <string name="income_time_hint">Поступление заказа:</string>
    <string name="order_time_hint">Заказано:</string>
    <string name="order_state_hint">Статус:</string>
    <string name="code_hint">Код:</string>
    <string name="xz_hint"></string>
    <string name="execution">Доставлено</string>
    <string name="none_hint">-</string>
    <string name="scan_inbox">Сканировать входящие</string>
    <string name="s20l">20 л.:</string>
    <string name="s20lm">20 л.(м):</string>
    <string name="s5l">5 л.:</string>
    <string name="s1_5l">1.5 л.:</string>
    <string name="s0_6l">0,6 л.:</string>
    <string name="count_hint_20">20 л.:</string>
    <string name="count_hint_20m">20 л.(м):</string>
    <string name="count_hint_5">5 л.:</string>
    <string name="count_hint_15">1.5 л.:</string>
    <string name="count_hint_06">0,6 л.:</string>
    <string name="execute_order">Выполнить</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_order_execution">Доставлено</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="in_num">Номер для входящих SMS</string>
    <string name="out_num">Номер для исходящих SMS</string>
    <string name="num_format">+X XXX XXX XX XX</string>
    <string name="error">Ошибка!</string>
    <string name="state_header">Статус</string>
    <string name="logo">logo</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="gms_problem">Невозможно получить информацию о местоположении!</string>
    <string name="no_sms_num">Настройте номер телефона для входящих SMS!</string>
	<string name="delimiter">,</string>
</resources>